tests/ui/lowering/expr-metavar-in-let-pattern.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/expr-metavar-in-let-pattern.rs:13:8
   |
LL |     m!(y);
   |        ^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/expr-metavar-in-let-pattern.rs:15:8
   |
LL |     m!(C);
   |        ^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: aborting due to 2 previous errors

